# averyLoop

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
averyloop/: convergence.py  evaluator.py  loop_config.py  loop_tracker.py  orchestrator_v2.py  outcomes.py  safety_gate.py  signals.py
averyloop/rag/: outcome_memory.py
benchmark/: README.md  __init__.py  __main__.py  metrics.py  runner.py  stub_agents.py
benchmark/fixtures/logic_bug/: calc.py  ground_truth.json
benchmark/fixtures/logic_bug/tests/: test_calc.py
benchmark/fixtures/noop/: ground_truth.json  mathx.py
benchmark/fixtures/noop/tests/: test_mathx.py
benchmark/fixtures/revert_trap/: cache.py  ground_truth.json
benchmark/fixtures/revert_trap/tests/: test_cache.py
benchmark/fixtures/safety_trap/: ground_truth.json  leak.py
benchmark/fixtures/safety_trap/tests/: test_safety.py
benchmark/fixtures/style_nit/: ground_truth.json  widget.py
benchmark/fixtures/style_nit/tests/: test_widget.py
docs/: EVALUATION.md
improvement_loop/: __init__.py  evaluator.py  git_utils.py  loop_config.py  loop_tracker.py  orchestrator_v2.py
improvement_loop/agents/: implementer.py  reviewer.py
tests/: conftest.py  test_benchmark.py  test_convergence.py  test_evaluator_finding.py  test_git_utils.py  test_loop_tracker.py  test_orchestrator.py  test_outcome_memory.py  test_outcomes.py  test_safety_gate.py  test_signals.py
